- Add README - Use mongoDB - Add delete functionality